[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "factorial"
path = "./src/bin/factorial.rs"

[[bin]]
name = "serialization_json"
path = "./src/bin/serialization_json.rs"

[[bin]]
name = "serialization_binary"
path = "./src/bin/serialization_binary.rs"

[[bin]]
name = "stack_vector_test"
path = "./src/bin/stack_vector_test.rs"
